# BellumGero-Live

./: .gitignore  CHANGELOG.md  FeaturePlan_InsectMeatPlan.md  README_WildMeat_ResourceCreatures.md  SWG_CONTEXT.md  SWG_FILE_CODE_STRUCUTRE_CONTEXT.md  WORKSPACE_STRUCTURE.md  cursor_cursor_wsl_extension_project_fol.md
.cursor/: README.md  argv.json  ide_state.json
.cursor/context/: CREATURE_MISSION_TERMINAL_REQUIREMENTS.md  CREATURE_TEST_RUNNER.md  DEV_ENVIRONMENTS.md  LOCAL_DEV_ENV_SETUP.md  REMOTE_CLIENTS_AND_SHADOW.md  SOP_TESTING_NEW_CREATURES.md  SWG_ADMIN_COMMANDS_CONTEXT.md  SWG_CONTEXT.md  SWG_FILE_CODE_STRUCUTRE_CONTEXT.md  WORKSPACE_STRUCTURE.md  cursor_core3_server_reboot_command.md  cursor_domesticated_milk.md  cursor_nightsister_lance_weapon_creatio.md  cursor_previous_agent_chats_location.md  cursor_previous_agent_chats_location_BREAKDOWN.md
.cursor/plans/: creature_testing_procedure_eee15654.plan.md  insect_meat_creatures_dantooine_lok_tatooine_yavin.plan.md
.cursor/rules/: bellum-gero.mdc  branch-naming.mdc  context-files.mdc  documentation.mdc  feature-branch-workflow.mdc
.cursor/scripts/: premerge-check.ps1  premerge-check.sh
.github/workflows/: block-config-branch-merge.yml
MMOCoreORB/: .gitignore  CMakeLists.txt  bellumgero_change_log.md
MMOCoreORB/src/: CMakeLists.txt
MMOCoreORB/src/server/zone/managers/discord/: CMakeList.txt  CMakeLists.txt  DiscordManager.idl  DiscordManagerImplementation.cpp  DiscordManagerImplementation.h
docker/: Dockerfile  env-base
docs/: all_cantina_npc_placement_report.md  mos_eisley_cantina_npc_report.md
(+398 files in other folders)
